# bang-rust

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
public/: manifest.json
src/: App.tsx  index.css  main.rs  router.tsx
src/components/: bullet.tsx  card-svg-icon.tsx  detalhes-carta.tsx
src/core/: cartas.rs  jogos.rs  mod.rs  personagens.rs
src/interfaces/cards/: cards.tsx
src/interfaces/character/: character.tsx
src/interfaces/game/: game.tsx
src/interfaces/player/: player.tsx
src/interfaces/role/: role.tsx
src/routes/: mod.rs
src/services/: index.tsx
src/services/game/: game.tsx
