[package]
name = "Bang-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
axum = { version = "0.8.1", features = [ "macros", "multipart", "ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = {version = "0.6.1", features = ["cors", "fs"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.30"
serde_json = "1"